[package]
name = "raw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.17" }
etag = { version = "3.0.0" }
dotenv = { version = "0.15.0" }
httpdate = { version = "1.0.2" }
bb8-postgres = { version ="0.8.0" }
simple_logger = { version = "2.1.0" }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }